# ais_parser

./: AUTHORS.rst  Pipfile  README.md  ais_parser.conf  aistool.conf  environment.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
ais_parser/: __init__.py  cli.py  config_setter.py  loader.py  utils.py
ais_parser/algorithms/: aisparser.py  imolister.py
ais_parser/filter_for_visualisations/: AIS_demo_data.ipynb  config.yml  meta_data.yml  processplotter.py
ais_parser/filter_for_visualisations/.ipynb_checkpoints/: AIS_demo_data-checkpoint.ipynb
ais_parser/filter_for_visualisations/filtered_data_for_visualisations/: ais_data_output.csv
ais_parser/programs/: aisparser.py  imolister.py  shipsimporter.py
ais_parser/repositories/: aisdb.py  file.py  sql.py
ais_parser/tools/: __init__.py  resampler.py
docs/: Makefile  conf.py  index.rst
tests/: conftest.py  test_aisparser.py  test_loader.py  test_sql.py  test_validation.py  utilities.py
